--- a/submit/prj4-sol/package.json
+++ b/submit/prj4-sol/package.json
@@ -8,11 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mustache": "^4.0.1"
-  }
+  "license": "ISC"
 }
